Fix top overflow on large screens

--- a/packages/tailwind/tailwind-base.css
+++ b/packages/tailwind/tailwind-base.css
@@ -347,6 +347,8 @@
   [data-slot="form-steps"] {
     counter-reset: form-step-counter;
     @apply flex gap-x-3 lg:flex-col lg:gap-y-14 scrollbar-hidden overflow-x-auto;
+    /** Make room for the absolutely positioned check icon on the first item */
+    @apply lg:pt-1;
 
     [data-slot="form-step"] {
       counter-increment: form-step-counter;
